student speaker competition

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -568,6 +568,9 @@
       font-family: Helveticaneuelight;
       font-size: 45px;
     }
+    &.student_speakers {
+      margin-bottom: 30px;
+    }
   }
   .student_speaker {
     margin-bottom: 50px;
