--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,35 @@
   </script>
 </head>
 <body>
+<!--Facebook-->
+<div id="fb-root"></div>
+<script>
+  window.fbAsyncInit = function() {
+    // init the FB JS SDK
+    FB.init({
+      appId      : '321791014603315', // App ID from the App Dashboard
+      channelUrl : '//www.tedxyale.com/channel.html', // Channel File for x-domain communication
+      status     : true, // check the login status upon init?
+      cookie     : true, // set sessions cookies to allow your server to access the session?
+      xfbml      : true  // parse XFBML tags on this page?
+    });
+
+    // Additional initialization code such as adding Event Listeners goes here
+
+  };
+
+  // Load the SDK's source Asynchronously
+  // Note that the debug version is being actively developed and might 
+  // contain some type checks that are overly strict. 
+  // Please report such bugs using the bugs tool.
+  (function(d, debug){
+     var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement('script'); js.id = id; js.async = true;
+     js.src = "//connect.facebook.net/en_US/all" + (debug ? "/debug" : "") + ".js";
+     ref.parentNode.insertBefore(js, ref);
+   }(document, /*debug*/ false));
+</script>
 
 <!--Header Start-->
 <div class="header">
@@ -51,7 +80,7 @@
 		          <%= current_user.name %>
 		        </div>
 		        <ul class="dropdown_menu">
-  			      <li><a href="/dashboard/current_events">Dashboard</a></li>
+  			      <li><a href="/2013"><%= current_user.votes_left %> votes left</a></li>
   			      <li><a href="/logout">Logout</a></li>
   			    </ul>
   			  </div>
