--- a/app/assets/javascripts/backbone/templates/student_speakers/video.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/student_speakers/video.jst.ejs
@@ -7,8 +7,12 @@
     <div class="student_name"><%= name %></div>
     <div class="student_talk"><%= talk %></div>
     <div class="student_votes">
-      <button data-id="<%= id %>" id="vote">Vote for <%= name.split(" ")[0] %></button>
-      <span><%= votes %> votes</span>
+      <% if(TEDxYale.user.id) { %>
+        <button data-id="<%= id %>" id="vote">Vote for <%= name.split(" ")[0] %></button>
+        <span><%= votes %> votes</span>
+      <%} else {%>
+        <div class="vote_fb fb_login"><span>Connect to Vote</span></div>
+      <% }%>
     </div>
   </div>
 </div>
