--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,7 +66,7 @@
 		          <%= current_user.name %>
 		        </div>
 		        <ul class="dropdown_menu">
-  			      <li><a href="/dashboard/current_events">Dashboard</a></li>
+  			      <li><a href="/2013"><%= current_user.votes.count %> votes made</a></li>
   			      <li><a href="/admin/events">Admin</a></li>
   			      <li><a href="/wiki">Wiki</a></li>
   			      <li><a href="/logout">Logout</a></li>
