--- a/app/assets/javascripts/backbone/templates/student_speakers/video.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/student_speakers/video.jst.ejs
@@ -9,7 +9,7 @@
     <div class="student_votes">
       <% if(TEDxYale.user.id) { %>
         <button data-id="<%= id %>" id="vote">Vote for <%= name.split(" ")[0] %></button>
-        <span><%= votes %> votes</span>
+        <span class="votes"><%= votes %> votes</span>
       <%} else {%>
         <div class="vote_fb fb_login"><span>Connect to Vote</span></div>
       <% }%>
