--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -1,6 +1,21 @@
 // Place all the styles related to the About controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+//Mixins
+@mixin HN-Light {
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: lighter;
+}
+@mixin HN-Bold {
+  font-family: "HelveticaNeue-Bold", "Helvetica Neue Bold", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: bold;
+}
+@mixin HN-Regular {
+  font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: normal;
+}
+
 .wrapper {
   .left {
     width: 280px;
@@ -9,7 +24,7 @@
     padding-left: 5px;
     position: fixed;
     h3 {
-      font-family: Helveticaneuebold;
+      @include HN-Bold;
       color: #333;
       font-size: 45px;
       line-height: 50px;
@@ -24,7 +39,7 @@
       padding: 0px;
       margin: 0px;
       li {
-        font-family: Helveticaneuebold;
+        @include HN-Bold;
         border-bottom: 1px solid #DADADA;
         font-size: 15px;
         position: relative;
@@ -54,7 +69,7 @@
     margin-top: 24px;
     .section {
       h4 {
-        font-family: Helveticaneuebold;
+        @include HN-Bold;
         font-size: 20px;
         line-height: 30px;
         padding: 0px;
@@ -62,7 +77,7 @@
         border-bottom: 2px solid #dadada;
       }
       p {
-        font-family: Helveticaneuelight;
+        @include HN-Light;
         font-size: 14px;
         line-height: 21px;
       }
@@ -87,13 +102,13 @@
           padding-top: 20px;
           float: left;
           .name {
-            font-family: Helveticaneuebold;
+            @include HN-Bold;
             color: #333;
             font-size: 15px;
           }
           .title {
             margin-top: 2px;
-            font-family: Helveticaneue;
+            @include HN-Regular;
             font-style: italic;
           }
           .twitter {
@@ -106,7 +121,7 @@
             a {
               float: left;
               text-decoration: none;
-              font-family: Helveticaneuelight;
+              @include HN-Light;
               line-height: 15px;
               font-size: 13px;
               padding-left: 3px;
