--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -2,13 +2,27 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+//Mixins
+@mixin HN-Light {
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: lighter;
+}
+@mixin HN-Bold {
+  font-family: "HelveticaNeue-Bold", "Helvetica Neue Bold", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: bold;
+}
+@mixin HN-Regular {
+  font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: normal;
+}
+
 .admin_menu {
   width: 180px;
 	position:fixed;
 	.title {
 	  color: #e60000;
 	  font-size: 18px;
-	  font-family: Helveticaneuelight;
+	  @include HN-Light;
 	  padding: 10px 15px;
 	  border-bottom: 1px solid #dadada;
 	}
@@ -21,7 +35,7 @@
 	    border-right: 0px;
 	    a {
 	      font-size: 16px;
-  	    font-family: Helveticaneuebold;
+  	    @include HN-Bold;
   	    color: #333;
   	    text-decoration: none;
   	    display: block;
@@ -36,7 +50,7 @@
 	  }
 	  a {
 	    font-size: 14px;
-	    font-family: Helveticaneuebold;
+	    @include HN-Bold;
 	    color: #333;
 	    text-decoration: none;
 	    display: block;
@@ -60,7 +74,7 @@
   min-height: 300px;
   border-left: 1px solid #bbb;
   h1 {
-    font-family: Helveticaneuebold;
+    @include HN-Bold;
     font-size: 25px;
   }
   hr {
@@ -80,12 +94,12 @@
       th {
         text-align: left;
         padding: 0px;
-        font-family: Helveticaneuebold;
+        @include HN-Bold;
       }
       td {
         border-collapse: collapse;
         padding: 5px 0px;
-        font-family: Helveticaneue;
+        @include HN-Regular;
       }
     }
   }
@@ -100,7 +114,7 @@
         label {
           width: 100%;
           font-size: 15px;
-          font-family: Helveticaneuelight;
+          @include HN-Light;
           color: #777;
           line-height: 20px;
         }
@@ -112,7 +126,7 @@
           padding: 10px;
           border: 1px solid #dadada;
           background: #fff;
-          font-family: Helveticaneue;
+          @include HN-Regular;
           outline: none;
           -webkit-transition: .5s;
           &:hover {
@@ -144,7 +158,7 @@
           width: 460px;
           text-align: center;
           background: #ff0000;
-          font-family: Helveticaneue;
+          @include HN-Regular;
           color: #fff;
           font-size: 15px;
           line-height: 20px;
@@ -196,7 +210,7 @@
         display: block;
         padding: 5px 0px;
         border-top: 1px solid #dadada;
-        font-family: Helveticaneuebold;
+        @include HN-Bold;
         color: #333;
         text-align: center;
         text-decoration:none;
@@ -218,7 +232,7 @@
         height: 30px;
         line-height: 30px;
         font-size: 13px;
-        font-family: Helveticaneuebold;
+        @include HN-Bold;
         text-align: center;
       }
       .active {
@@ -329,7 +343,7 @@
     }
     h5 {
       color: #dadada;
-      font-family: Helveticaneuebold;
+      @include HN-Bold;
       font-size: 20px;
       text-align: center;
     }
@@ -339,12 +353,12 @@
       .left {
         float: left;
         width: 70px;
-        font-family: Helveticaneuebold;
+        @include HN-Bold;
       }
       .align_right {
         float: left;
         width: 210px;
-        font-family: Helveticaneuelight;
+        @include HN-Light;
       }
     }
   }
@@ -359,7 +373,7 @@
       .label {
         float:left;
         color: #e60000;
-        font-family: Helveticaneuelight;
+        @include HN-Light;
         padding: 5px;
         line-height:10px;
       }
@@ -369,7 +383,7 @@
       }
       .count {
         float: right;
-        font-family: Helveticaneuelight;
+        @include HN-Light;
         color: #e60000;
         font-style: italic;
         margin-right: 10px;
@@ -383,7 +397,7 @@
       border-bottom: 1px solid #dadada;
       cursor: pointer;
       overflow: auto;
-      font-family: Helveticaneue;
+      @include HN-Regular;
       .name {
         float: left;
         width: 200px;
@@ -441,7 +455,7 @@
     border: 1px solid #777;
     -webkit-transition: 0.2s;
     a {
-      font-family: Helveticaneuebold;
+      @include HN-Bold;
       font-size: 13px;
       line-height: 20px;
       text-decoration: none;
