--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -2,9 +2,19 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-@font-face { font-family: Helveticaneue; src: url('/assets/helveticaneue.otf'); } 
-@font-face { font-family: Helveticaneuebold; src: url('/assets/helveticaneuebold.otf'); }
-@font-face { font-family: Helveticaneuelight; src: url('/assets/helveticaneuelight.otf'); }
+//Mixins
+@mixin HN-Light {
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: lighter;
+}
+@mixin HN-Bold {
+  font-family: "HelveticaNeue-Bold", "Helvetica Neue Bold", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: bold;
+}
+@mixin HN-Regular {
+  font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: normal;
+}
 
 
 .registration_back {
@@ -57,13 +67,13 @@
         font-size: 11px;
         line-height: 15px;
         color: #fff;
-        font-family: Helveticaneuelight;
+        @include HN-Light;
       }
       p.day {
         font-size: 50px;
         line-height: 50px;
         color: #fff;
-        font-family: Helveticaneuebold;
+        @include HN-Bold;
       }
     }
   }
@@ -74,7 +84,7 @@
     h1 {
       margin: 0px;
       padding: 0px;
-      font-family: Helveticaneuebold;
+      @include HN-Bold;
       color: #333;
       font-size: 40px;
       line-height: 40px;
@@ -90,12 +100,12 @@
       font-size: 15px;
       line-height: 21px;
       color: #777;
-      font-family: Helveticaneuelight;
+      @include HN-Light;
     }
     .speakers {
       margin: 20px 0px;
       h3 {
-        font-family: Helveticaneuebold;
+        @include HN-Bold;
         font-size: 20px;
         line-height: 30px;
         padding: 0px;
@@ -119,12 +129,12 @@
           margin-top: 10px;
           margin-bottom: 10px;
           .name {
-            font-family: Helveticaneuebold;
+            @include HN-Bold;
             font-size: 18px;
             margin-bottom: 5px;
           }
           .bio {
-            font-family: Helveticaneuelight;
+            @include HN-Light;
             font-size: 15px;
             color: #777;
           }
@@ -137,7 +147,7 @@
             }
             a {
               float: left;
-              font-family: Helveticaneuelight;
+              @include HN-Light;
               color: #29ABE2;
               font-size: 15px;
               text-decoration: none;
@@ -182,7 +192,7 @@
         text-decoration: none;
         font-size: 21px;
         line-height: 50px;
-        font-family: Helveticaneuelight;
+        @include HN-Light;
         background: -moz-linear-gradient(0% 100% 90deg, #00CC00, #00E600);
     	  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#00E600), to(#00CC00));
         background: -moz-linear-gradient(0% 100% 90deg, #00CC00, #00E600);
@@ -214,7 +224,7 @@
         text-decoration: none;
         font-size: 21px;
         line-height: 50px;
-        font-family: Helveticaneuelight;
+        @include HN-Light;
         background: -moz-linear-gradient(0% 100% 90deg, #0099FF, #19A3FF);
     	  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#19A3FF), to(#0099FF));
         background: -moz-linear-gradient(0% 100% 90deg, #0099FF, #19A3FF);
@@ -246,7 +256,7 @@
         text-decoration: none;
         font-size: 21px;
         line-height: 50px;
-        font-family: Helveticaneuelight;
+        @include HN-Light;
         background: #dadada;
         border-radius: 2px;
         z-index: 1;
@@ -260,12 +270,12 @@
       margin-top: 1px;
       padding-bottom: 30px;
       .date {
-        font-family: Helveticaneuebold;
+        @include HN-Bold;
         font-size: 15px;
         line-height: 25px;
       }
       .time {
-        font-family: Helveticaneue;
+        @include HN-Regular;
         font-size: 14px;
         line-height: 20px;
         color: #333;
@@ -280,7 +290,7 @@
           line-height: 25px;
           padding: 0px;
           margin: 0px;
-          font-family: Helveticaneuebold;
+          @include HN-Bold;
           font-weight: normal;
         }
         h3 {
@@ -288,12 +298,12 @@
           line-height: 20px;
           padding: 0px;
           margin: 0px;
-          font-family: Helveticaneue;
+          @include HN-Regular;
           font-weight: normal;
           color: #333;
         }
         a {
-          font-family: Helveticaneue;
+          @include HN-Regular;
           color: #ff0000;
           margin-bottom: 10px;
         }
@@ -323,7 +333,7 @@
     }
     .sponsors {
       h5 {
-        font-family: Helveticaneuebold;
+        @include HN-Bold;
         font-size: 20px;
         color: #333;
         border-bottom: 1px solid #777;
@@ -333,7 +343,7 @@
         width: 100%;
       }
       .name {
-        font-family: Helveticaneuelight;
+        @include HN-Light;
         font-size: 14px;
         text-align: center;
       }
@@ -344,7 +354,7 @@
 .events {
   clear: both;
   h2 {
-    font-family: Helveticaneuebold;
+    @include HN-Bold;
     font-size: 25px;
     line-height: 35px;
     width: 100%;
@@ -353,7 +363,7 @@
     text-align: center;
   }
   h5 {
-    font-family: Helveticaneuelight;
+    @include HN-Light;
     font-size: 14px;
     color: #777;
     padding: 10px 0;
@@ -410,7 +420,7 @@
           position: absolute;
           bottom: 3px;
           right: 0px;
-          font-family: Helveticaneuebold;
+          @include HN-Bold;
           color: #fff;
           font-size: 40px;
         }
@@ -418,7 +428,7 @@
       .name {
         padding: 10px;
         font-size: 18px;
-        font-family: Helveticaneuebold;
+        @include HN-Bold;
         a {
           color: #333;
           text-decoration: none;
@@ -434,7 +444,7 @@
         }
       }
       .location {
-        font-family: Helveticaneuelight;
+        @include HN-Light;
         padding: 0 10px;
         margin-top: -5px;
         color: #777;
@@ -458,7 +468,7 @@
         border-bottom: none;
         text-align: center;
         line-height: 45px;
-        font-family: Helveticaneue;
+        @include HN-Regular;
         color: #555;
         font-size: 15px;
         &:first-child {
@@ -518,7 +528,7 @@
         .name {
           padding-bottom: 3px;
           a {
-            font-family: Helveticaneuebold;
+            @include HN-Bold;
             font-size: 20px;
             color: #333;
             text-decoration: none;
@@ -537,13 +547,13 @@
           }
         }
         .date {
-          font-family: Helveticaneue;
+          @include HN-Regular;
           font-size: 13px;
           color: #333;
           padding-bottom: 5px;
         }
         .description {
-          font-family: Helveticaneuelight;
+          @include HN-Light;
           font-size: 13px;
           padding-right: 20px;
           color: #555;
@@ -565,7 +575,7 @@
     padding-bottom: 20px;
     margin-bottom: 50px;
     h1.message {
-      font-family: Helveticaneuelight;
+      @include HN-Light;
       font-size: 45px;
     }
     &.student_speakers {
@@ -594,7 +604,7 @@
       h2 {
         text-align: center;
         font-size: 20px;
-        font-family: Helveticaneuebold;
+        @include HN-Bold;
       }
       &:hover {
         background: #e60000;
@@ -608,7 +618,7 @@
       width: 400px;
       float: left;
       label {
-        font-family: Helveticaneuelight;
+        @include HN-Light;
         color: #333;
         font-size: 15px;
       }
@@ -618,7 +628,7 @@
         background: white;
         padding: 15px 10px;
         font-size: 20px;
-        font-family: Helveticaneue;
+        @include HN-Regular;
         -webkit-transition: 0.2s;
         outline: none;
         margin-bottom: 10px;
@@ -632,7 +642,7 @@
         background: #eee;
         font-size: 17px;
         line-height: 30px;
-        font-family: Helveticaneuelight;
+        @include HN-Light;
         cursor: pointer;
         &:hover, &:focus {
           background: #dadada;
@@ -657,7 +667,7 @@
         padding: 0px 40px;
         margin-bottom: 40px;
         p {
-          font-family: Helveticaneuelight;
+          @include HN-Light;
           font-size: 15px;
         }
       }
