--- a/app/assets/stylesheets/speakers.css.scss
+++ b/app/assets/stylesheets/speakers.css.scss
@@ -1,18 +1,33 @@
 // Place all the styles related to the Speakers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+//Mixins
+@mixin HN-Light {
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: lighter;
+}
+@mixin HN-Bold {
+  font-family: "HelveticaNeue-Bold", "Helvetica Neue Bold", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: bold;
+}
+@mixin HN-Regular {
+  font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: normal;
+}
+
 .form_notice {
   text-align: center;
   margin-bottom: 15px;
   border: 1px solid red;
   border-radius: 10px;
   padding: 5px;
-  font-family: Helveticaneuelight;
+  @include HN-Light;
   color: red;
 }
 h5 {
   text-align: center;
-  font-family: Helveticaneuelight;
+  @include HN-Light;
   font-style: italic;
   font-size: 20px;
   color: red;
@@ -39,7 +54,7 @@ h5 {
         width: 478px;
         padding: 10px;
         border: 1px solid #777;
-        font-family: Helveticaneuelight;
+        @include HN-Light;
         font-size: 15px;
         height: 148px;
         outline: none;
@@ -54,7 +69,7 @@ h5 {
       background: white;
       padding: 15px 10px;
       font-size: 20px;
-      font-family: Helveticaneue;
+      @include HN-Regular;
       -webkit-transition: 0.2s;
       outline: none;
       margin-bottom: 10px;
@@ -66,7 +81,7 @@ h5 {
   .menu {
     width: 980px;
     clear: both;
-    font-family: Helveticaneuebold;
+    @include HN-Bold;
     font-size: 25px;
     line-height: 40px;
     background: white;
