--- a/app/views/events/conference.html.haml
+++ b/app/views/events/conference.html.haml
@@ -1,6 +1,8 @@
 .wrapper
   .announcement.student_speakers
-    %h1.message Help Pick 2013's Student Speakers
+    %h1.message
+      Help Pick 2013's Student Speakers
+      /%a(href="/early_bird") Reserve Your Ticket
   / .student_speaker
   /     %a(href="/become_a_speaker" class="student_speakers")
   /       %h2 Audition for a Student Speaker Position
