--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= csrf_meta_tags %>
   <meta property="og:title" content="TEDxYale" /> 
   <meta property="og:image" content="/assets/fb_logo.jpg" /> 
-  <meta property="og:description" content="Yale's Hub of Innovation and Discovery. TEDxYale is where students and professionals share their stories and experiences." /> 
+  <meta property="og:description" content="Through events and multimedia, TEDxYale connect the world’s brightest minds with the world’s best stories." /> 
   <script type="text/javascript">
 
 	  var _gaq = _gaq || [];
@@ -57,7 +57,7 @@
 <!--Header Start-->
 <div class="header">
 	<div id="header_container">
-	  <a href="/" class="logo_link"><img src="/assets/tedxyale_logo.png" id="logo"/></a>
+	  <a href="/" class="logo_link"><img src="/assets/tedxyale_logo_white.png" id="logo"/></a>
 		<% if current_user %>
 		  <% if current_admin %>
 			  <a class="header_item_link">
