--- a/app/assets/javascripts/backbone/templates/student_speakers/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/student_speakers/index.jst.ejs
@@ -1,4 +1,4 @@
-<p class="voting_text">Nearly thirty students auditioned for an opportunity to share their story with the Yale community. We've selected twelve engaging speakers as candidates for student speaker spots at TEDxYale 2013. The conference will be held on <span>February 23rd, 2012</span>, and we need your help picking the three winning student speakers. You'll receive <span>ten votes</span> upon connecting your facebook account, so cast your votes carefully. Voting ends Dec. 21st. Happy voting!</p>
+<p class="voting_text">Nearly thirty students auditioned for an opportunity to share their story with the Yale community. After almost two weeks of voting, the three speakers below have <span>won student speaker spots at TEDxYale 2013</span>. The conference will be held on <span>February 23rd, 2012</span>, so make sure you reserve your TEDxYale ticket to hear them speak. Feel free to also view all the finalists' talks below. Congratulations speakers!</p>
 <div id="leaderboard"></div>
 <div id="chart"></div>
 <div class="students_menu">
