--- a/app/views/events/conference.html.haml
+++ b/app/views/events/conference.html.haml
@@ -1,7 +1,7 @@
 .wrapper
   .announcement.student_speakers
     %h1.message
-      Help Pick 2013's Student Speakers
+      Congratulations, Student Speakers
       %a(href="/early_bird") Reserve Your Ticket
   / .student_speaker
   /     %a(href="/become_a_speaker" class="student_speakers")
